live link images showing probleml sovle and banner images size optimized

--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
                       <div tabindex="0" role="button" class="btn btn-ghost btn-circle avatar">
                         <div class="w-10 rounded-full ring-2 ring-offset-2 ring-offset-white">
                           <img alt="Profile Image"
-                            src="./images/team1.png" />
+                            src="./images/team_1.png" />
                         </div>
                       </div>
                       <ul tabindex="0" class="menu menu-sm dropdown-content bg-base-100 rounded-box z-[1] mt-3 w-60 p-2 shadow">
@@ -204,7 +204,7 @@
                            
                             <div class=" bg-white rounded-2xl w-full mb-3">
                               <div class="flex flex-row items-start gap-2">
-                                  <img src="/images/team1.png" class="rounded-lg w-20 h-20"/>
+                                  <img src="./images/team_1.png" class="rounded-lg w-20 h-20"/>
                                   <div class="flex flex-col justify-between w-full">
                                       <div>
                                           <p class="text-xl font-medium text-gray-800">
@@ -309,7 +309,7 @@
 
                 <!-- banner 1 -->
                 <div id="slide1" class="carousel-item relative w-full ">
-                    <div class="hero bg-blend-overlay bg-cover bg-center lg:rounded-xl" style="background-image: url(./images/banner2.png), linear-gradient(180.00deg, rgb(18, 18, 18) -14.417%,rgba(18, 18, 18, 0) 100%);">
+                    <div class="hero bg-blend-overlay bg-cover bg-center lg:rounded-xl" style="background-image: url(./images/banner2.jpg), linear-gradient(180.00deg, rgb(18, 18, 18) -14.417%,rgba(18, 18, 18, 0) 100%);">
                     <div class=""></div>
                     <div class="hero-content text-neutral-content text-center">
                       <div class="max-w-md">
@@ -888,7 +888,7 @@
                         <div class="p-3 rounded-md border border-transparent ease-in duration-300 hover:shadow-custom-shadow-md  hover:border-gray-300">
                             <div class="mb-4 text-center opacity-90">
                                 <a href="#" class="relative block">
-                                  <img alt="profile" src="/images/team1.png" class="mx-auto object-cover rounded-full w-32"/>
+                                  <img alt="profile" src="./images/team_1.png" class="mx-auto object-cover rounded-full w-32"/>
                                 </a>
                             </div>
                             <div class="text-center">
@@ -906,7 +906,7 @@
                         <div class="p-3 rounded-md border border-transparent ease-in duration-300 hover:shadow-custom-shadow-md  hover:border-gray-300">
                           <div class="mb-4 text-center opacity-90">
                               <a href="#" class="relative block">
-                                <img alt="profile" src="/images/team2.png" class="mx-auto object-cover rounded-full w-32"/>
+                                <img alt="profile" src="./images/team_2.png" class="mx-auto object-cover rounded-full w-32"/>
                               </a>
                           </div>
                           <div class="text-center">
@@ -924,7 +924,7 @@
                       <div class="p-3 rounded-md border border-transparent ease-in duration-300 hover:shadow-custom-shadow-md  hover:border-gray-300">
                         <div class="mb-4 text-center opacity-90">
                             <a href="#" class="relative block">
-                              <img alt="profile" src="/images/team3.png" class="mx-auto object-cover rounded-full w-32"/>
+                              <img alt="profile" src="./images/team_3.png" class="mx-auto object-cover rounded-full w-32"/>
                             </a>
                         </div>
                         <div class="text-center">
@@ -942,7 +942,7 @@
                       <div class="p-3 rounded-md border border-transparent ease-in duration-300 hover:shadow-custom-shadow-md  hover:border-gray-300">
                         <div class="mb-4 text-center opacity-90">
                             <a href="#" class="relative block">
-                              <img alt="profile" src="/images/team4.png" class="mx-auto object-cover rounded-full w-32"/>
+                              <img alt="profile" src="./images/team_4.png" class="mx-auto object-cover rounded-full w-32"/>
                             </a>
                         </div>
                         <div class="text-center">
