team bg image optimized

--- a/index.html
+++ b/index.html
@@ -873,7 +873,7 @@
        </section>
       <!-- Our super client section  -->
       <section class="rounded-lg">
-        <div class="hero h-auto lg:h-[690px] bg-[url(./images/team_bg.png)] rounded-md">
+        <div class="hero h-auto lg:h-[690px] bg-[url(./images/team_bg.jpg)] rounded-md">
             <div class="hero-overlay bg-opacity-60 rounded-md"></div>
             <div class="text-neutral-content text-center p-6 space-y-12">
                 <div class="space-y-6">
